Enable test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,5 @@ install:
 
 script:
   - yarn run lint
-  # TODO: Enable testing
-  # - yarn run test
-  # - yarn run integration
-  # - codecov
+  - yarn run test
+  - codecov
