--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "serverless-plugin-tables",
   "version": "1.0.1",
   "license": "MIT",
+  "description": "A Serverless plugin that makes adding tables to your service file easy",
+  "repository": "github:chris-feist/serverless-plugin-tables",
   "main": "./lib/index.js",
   "scripts": {
     "preinstall": "npx use-yarn",
