--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.npmrc
 
 # Created by https://www.gitignore.io/api/node,serverless,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,serverless,visualstudiocode
